# dgml

./: .gitignore  README.md  pyproject.toml
dgml/: __main__.py  cli.py  colors.py  compile.py  config.py  dgml.lark  dgmlb_writer.py  expressions.lark  lint.py  meta.py  parser.py  play.py  runtime.py  util.py
dgmlrt-c/: CMakeLists.txt  compile.sh  dgmlb-test.cpp  dgmlb.h  dgmlrt.cpp  dgmlrt.h  example.cpp
dgmlrt-c/cmake/: no-exceptions.cmake  no-rtti.cmake  wall.cmake
docs/: authoring_dialogue.md  engine_integration.md
editors/sublime-text/: DGML.sublime-syntax
examples/quest/: .gitignore  compile.sh  lint.sh  play.sh  quest.dgml  quest.json  quest.meta.json  quest.yaml
